// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linked Authors List adds empty fields to the end of the list 1`] = `
<div
  className="makeStyles-inputField-2"
>
  <div
    className="makeStyles-affiliatedAuthorRow-5"
  >
    <input
      data-cmp="Index"
      onChange={[Function]}
      value="149aa8ef-ed62-4ef9-aeaa-9758ce99c136"
    />
    <div
      data-cmo="iconButton"
    />
  </div>
  <div
    className="makeStyles-affiliatedAuthorRow-5"
  >
    <input
      data-cmp="Index"
      onChange={[Function]}
      value=""
    />
    <div
      data-cmo="iconButton"
    />
  </div>
  <div
    data-cmo="Button"
  />
</div>
`;

exports[`Linked Authors List removes elements from the list 1`] = `
<div
  className="makeStyles-inputField-2"
>
  <div
    className="makeStyles-affiliatedAuthorRow-5"
  >
    <input
      data-cmp="Index"
      onChange={[Function]}
      value="149aa8ef-ed62-4ef9-aeaa-9758ce99c136"
    />
    <div
      data-cmo="iconButton"
    />
  </div>
  <div
    className="makeStyles-affiliatedAuthorRow-5"
  >
    <input
      data-cmp="Index"
      onChange={[Function]}
      value=""
    />
    <div
      data-cmo="iconButton"
    />
  </div>
  <div
    data-cmo="Button"
  />
</div>
`;

exports[`Linked Authors List renders component 1`] = `
<div
  className="makeStyles-inputField-2"
>
  <div
    className="makeStyles-affiliatedAuthorRow-5"
  >
    <input
      data-cmp="Index"
      onChange={[Function]}
      value="149aa8ef-ed62-4ef9-aeaa-9758ce99c136"
    />
    <div
      data-cmo="iconButton"
    />
  </div>
  <div
    data-cmo="Button"
  />
</div>
`;
